<resources>
    <string name="access_group">Access Group</string>
    <string name="access_on_card">Access On Card</string>
    <string name="active">Active</string>
    <string name="add">Add</string>
    <string name="add_credential">Do you want to add credentials?</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_upper">ALARM</string>
    <string name="all_devices">All Devices</string>
    <string name="all_door">All Doors</string>
    <string name="all_events">All Events</string>
    <string name="all_users">All Users</string>
    <string name="allow_permission">Please allow permission</string>
    <string name="already_assigned">Already Allocated</string>
    <string name="app_name">BioStar 2</string>
    <string name="app_version">2.4.1.50</string>
    <string name="applied_filter">Filter Applied</string>
    <string name="biostar2">BioStar 2</string>
    <string name="ble">BLE</string>
    <string name="ble_not_support">This mobile does not support BLE mobile card.</string>
    <string name="ble_on_guide">NFC mobile card becomes inactive when BLE mobile smart card is set to use.</string>
    <string name="ble_on_guide2">It is supported only with BLE enabled devices.</string>
    <string name="block">Block</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Request Cancelled</string>
    <string name="card">Card</string>
    <string name="card_data_format">Card Data Format</string>
    <string name="card_id">Card ID</string>
    <string name="card_layout_format">Card Layout Format</string>
    <string name="card_on_device">Scan Card on Selected Device</string>
    <string name="card_type">Card Type</string>
    <string name="clear_alarm">Clear Alarm</string>
    <string name="clear_apb">Clear APB</string>
    <string name="credential">Credential</string>
    <string name="csn">CSN</string>
    <string name="csn_format_wigand_scan">CSN card can not be scanned because the CSN format type is set to Wiegand. </string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="delete_card">Delete Card</string>
    <string name="delete_confirm">Confirm Delete</string>
    <string name="delete_confirm_question">Permanently Delete Data?</string>
    <string name="delete_fingerprint">Delete Fingerprint</string>
    <string name="delete_permission">Delete Permission</string>
    <string name="delete_picture">Delete Photo</string>
    <string name="deleted_user">User Deleted</string>
    <string name="designed">Designed by Suprema</string>
    <string name="device">Device</string>
    <string name="direct_download">Directly Download APK File</string>
    <string name="discern_empty">Facility Code is not applied.</string>
    <string name="disconnected">Disconnected</string>
    <string name="distance_close">Close</string>
    <string name="distance_immediate">Immediate</string>
    <string name="distance_near">Near</string>
    <string name="donot_again">Do not display again.</string>
    <string name="door">Door</string>
    <string name="door_control">Door Control</string>
    <string name="door_is_open">Door Opened</string>
    <string name="door_open_fail">Door Failed to Open</string>
    <string name="door_relay">Door Relay</string>
    <string name="door_sensor">Door Sensor</string>
    <string name="door_upper">DOOR</string>
    <string name="edit">Edit</string>
    <string name="edit_photo">Edit photo</string>
    <string name="email">Email</string>
    <string name="email_not_setted">Please set the email on the device setting app.</string>
    <string name="end_date">Expiry date</string>
    <string name="end_time">End time</string>
    <string name="entry_device">Entry Device</string>
    <string name="error_network">Network is disabled or the server address is incorrect.</string>
    <string name="error_network2">Network is disabled or the server is temporarily unavailable.</string>
    <string name="error_set_date">Expiry date must be later than the start date</string>
    <string name="error_set_end_date">Expiry date can not exceed 2030</string>
    <string name="error_set_start_date">Start date must be later than 1999</string>
    <string name="event">Event</string>
    <string name="exit_button">Exit Button</string>
    <string name="exit_device">Exit Device</string>
    <string name="face">Face</string>
    <string name="face_on_device">Please enroll according to the direction from the device screen.</string>
    <string name="fail">Request Failed</string>
    <string name="fail_retry">Request failed, would you like to retry?</string>
    <string name="fail_verify_finger">Fingerprint Verification Failed</string>
    <string name="filter">Filter</string>
    <string name="finger_on_device">Scan your finger on the selected device</string>
    <string name="finger_on_device_same">Rescan your finger on the selected device</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="forceUpdate">Update Required</string>
    <string name="forced_open">Forced Entry Detected</string>
    <string name="format">Format</string>
    <string name="from_gallery">From Gallery</string>
    <string name="group">Group</string>
    <string name="guide_feature_permission">Permission is needed to use this feature</string>
    <string name="guide_register_mobile_card1">Check issued mobile smart cards.</string>
    <string name="guide_register_mobile_card2">Use a mobile smart card after registration.</string>
    <string name="guide_register_mobile_card3">Touch a mobile smart card to register. </string>
    <string name="guide_register_mobile_card4">Fingerprint data are saved in your mobile device.</string>
    <string name="guide_register_mobile_card5">When you want to disable a mobile smart card, \n swipe to the left.</string>
    <string name="held_opened">Door Held Open</string>
    <string name="id">ID</string>
    <string name="id_code">Facility Code</string>
    <string name="image">image</string>
    <string name="inactive">Inactive</string>
    <string name="info">Information</string>
    <string name="inherited">Inherited Value</string>
    <string name="inherited_not_change">Can Not be Changed</string>
    <string name="input_port">Input Port</string>
    <string name="invalid_card">Invalid card </string>
    <string name="invalid_card_id">0\' is not allowed for the first number of Card ID. </string>
    <string name="invalid_card_type">Card format is not matched. </string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_userid">Invalid User ID, please enter a number between 1 - 4,294,967,294</string>
    <string name="issue_card_count">Issue Count</string>
    <string name="korean_day">요일</string>
    <string name="language">en</string>
    <string name="latest_version">Version is up to date</string>
    <string name="log_out">LOG OUT</string>
    <string name="login">Login</string>
    <string name="login_empty">Missing ID/Password/URL</string>
    <string name="login_expire">Login Expired</string>
    <string name="login_fail">Login Failed</string>
    <string name="login_id">Login ID</string>
    <string name="low_quality">Insufficient Fingerprint Quality</string>
    <string name="manual_lock">Manual Lock</string>
    <string name="manual_unlock">Manual Unlock</string>
    <string name="max_size">Exceeded Registration Limit</string>
    <string name="memory_poor">Insufficient Memory</string>
    <string name="menu">Menu</string>
    <string name="message_deviceReboot" formatted="false">%s was restarted.</string>
    <string name="message_deviceRs485Disconnect" formatted="false">%s was disconnected.</string>
    <string name="message_deviceTampering" formatted="false">%s was tampered.</string>
    <string name="message_doorApb" formatted="false">APB alarm was detected from %s.</string>
    <string name="message_doorForcedOpen" formatted="false">Forced open door was detected from %s </string>
    <string name="message_doorHeldOpen" formatted="false">Held open door was detected from %s.</string>
    <string name="message_doorOpenRequest" formatted="false">(%s) door open request was made by user(%s).</string>
    <string name="message_zoneApb" formatted="false">APB alarm was detected from %s.</string>
    <string name="message_zoneFire" formatted="false">Fire alarm was detected from  %s.</string>
    <string name="minute">Min</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_card">Mobile Smart Card</string>
    <string name="mobile_card_upper">MOBILE SMART CARD</string>
    <string name="monitoring">Monitoring</string>
    <string name="monitoring_upper">MONITORING</string>
    <string name="myprofile">My Profile</string>
    <string name="myprofile_upper">MY PROFILE</string>
    <string name="name">Name</string>
    <string name="nd">nd</string>
    <string name="need_latest_server_version">{0} or higher version should be installed.</string>
    <string name="need_permission_ble">In order to use mobile card, set to use BLE.</string>
    <string name="need_permission_storage">In order to enroll a user photo, access to the camera and the album.</string>
    <string name="new_">New</string>
    <string name="new_notification">New Notification</string>
    <string name="new_user">New User</string>
    <string name="new_version">A newer version is available, would you like to update?</string>
    <string name="nfc_not_support">This mobile does not support NFC mobile card.</string>
    <string name="no_more_data">End of Data</string>
    <string name="no_permission">You do not have the sufficient permissions</string>
    <string name="non_blocked">Access-on-card can be deleted after blocking. </string>
    <string name="none">None</string>
    <string name="none_card_layout_format">Smart Card Layout is not applied. </string>
    <string name="none_data">There is no available data</string>
    <string name="none_device">Device not found</string>
    <string name="none_door">Door not found</string>
    <string name="none_registered_fingerprint">There is no registered fingerprint data. </string>
    <string name="none_select_card">No card input(selection) was made.</string>
    <string name="none_user">User not found</string>
    <string name="none_wigand">The selected Wiegand format is not set in the device. Set the Wiegand format for the device with the PC version of BioStar.</string>
    <string name="notice_connection_fail">Network Connection Failed</string>
    <string name="notification">Notification</string>
    <string name="notification_time">Notification Time</string>
    <string name="ok">OK</string>
    <string name="only_alpha_num_email">Enter only letters, numbers, comma(,) or period(.)</string>
    <string name="only_alpha_num_special">Enter only letters, numbers, or special characters</string>
    <string name="only_number">Enter only Numbers</string>
    <string name="only_number_dash">Enter only enter numbers and dash(-), or plus(+)</string>
    <string name="open">Open</string>
    <string name="open_door_time">Door Open Time</string>
    <string name="open_door_time_des">(in 3 hours)</string>
    <string name="open_time">Open Time</string>
    <string name="operator">BioStar Operator</string>
    <string name="over_value">Max value exceeded.</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="password_display">********</string>
    <string name="period">Period</string>
    <string name="pin_upper">PIN</string>
    <string name="read_card">Read Card</string>
    <string name="register_method">Registration Method</string>
    <string name="smartcard_type">Smart Card Type</string>
    <string name="status">Status</string>
    <string name="telephone">Telephone</string>
    <string name="user_add">Add User</string>
    <string name="user_id">User ID</string>
</resources>