<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:gravity="center|top"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fadingEdge="none"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.supremainc.biostar2.view.SummaryUserView
                    android:id="@+id/summray_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/user_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:index="@string/user_id"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/name"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/email"
                        app:link="true"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/telephone"
                        app:link="true"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/operator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/operator"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/user_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/group"
                        app:link="false"/>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:background="@color/list_devider"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/status"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/period"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/period"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/access_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/access_group"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.StyledTextView
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:background="@color/list_devider"
                        android:ellipsize="end"
                        android:gravity="left|center"
                        android:maxLines="2"
                        android:paddingLeft="18dp"
                        android:paddingRight="18dp"
                        android:text="@string/credential"
                        android:textColor="@color/user_total"
                        android:textSize="14dp"
                        app:typeface="roboto_bold.ttf"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/fingerprint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/fingerprint"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/card"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/face"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/face"
                        app:link="false"/>

                    <com.supremainc.biostar2.view.DetailTextItemView
                        android:id="@+id/pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:edit="false"
                        app:index="@string/pin_upper"
                        app:link="false"/>


                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"/>
    </FrameLayout>

</LinearLayout>