<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.tabtest.MainActivity">


    <item
        android:id="@+id/action_add"
        android:icon="@drawable/selector_btn_add"
        android:orderInCategory="101"
        android:title="@string/user_add"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/selector_btn_delete"
        android:orderInCategory="102"
        android:title="@string/delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_usergroups"
        android:icon="@drawable/selector_btn_filter"
        android:orderInCategory="103"
        android:title="@string/filter"
        app:showAsAction="always"/>
</menu>
