<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidfont="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg"
    android:gravity="center|top"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize" />

    <com.supremainc.biostar2.view.SubToolbar
        android:id="@+id/subtoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/transparent80"
        android:layout_height="match_parent"
        android:paddingTop="136dp"
        android:fadingEdge="none"
        android:fillViewport="true">
        <LinearLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/aoc"
                layout="@layout/item_aoc"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.supremainc.biostar2.view.StyledTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center|top"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/guide_register_mobile_card3"
                androidfont:typeface="roboto_medium.ttf" />

            <com.supremainc.biostar2.view.StyledTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center|top"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/guide_register_mobile_card4"
                androidfont:typeface="roboto_medium.ttf" />

            <FrameLayout
                android:layout_width="44dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/ivory" />

            <com.supremainc.biostar2.view.StyledTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center|top"
                android:maxLines="2"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/guide_register_mobile_card5"
                androidfont:typeface="roboto_medium.ttf" />

            <FrameLayout
                android:id="@+id/aoc2_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center|top"
                >
            <include
                android:id="@+id/aoc2"
                layout="@layout/item_aoc"
                 android:layout_gravity="center|top"
                android:layout_marginTop="7dp"
                android:gravity="center|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@color/transparent80"/>
            </FrameLayout>

        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_guide"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/image"
            android:scaleType="fitCenter"
            android:src="@drawable/selector_btn_close2" />

        <com.supremainc.biostar2.view.StyledTextView
            android:id="@+id/close_alaways"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:layout_marginTop="16dp"
            android:maxLines="2"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:text="@string/donot_again"
            androidfont:typeface="roboto_medium.ttf" />
    </LinearLayout>



</FrameLayout>